--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://georgeharvey.site",
+  "homepage": "https://georgeharvey3.github.io/portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
